# github_user_activity

./: README.md  github_activity.toml  pyproject.toml
src/github_activity/: app.py
src/github_activity/configs/: bootstrap.py  config.py  http_request.py
src/github_activity/services/: activity.py
src/github_activity/user_interface/: cli.py
